Sources/sdk/sccio.h

/*****************************************************************************
 * End of Zip stuff
 ****************************************************************************/

/*****************************************************************************
 * Start of CAB stuff
 ****************************************************************************/
/* structure to provide access to CFDATA block structure */
typedef struct CABDATAtag
{
    HIOFILE     hRefFile;           /* range I/O file */

    VTWORD      wCompressedSize;    /* # of compressed bytes in block */
    VTWORD      wUncompressedSize;  /* # of uncompressed bytes in block */
} CABDATA, * PCABDATA;
/* structure to provide access to CFFILE info */
typedef struct CABFILEINFOtag
{
    VTDWORD         dwNameLoc;  /* offset into CABFILE.pNames */
    VTDWORD         dwNameLen;

    VTDWORD         dwFileSize; /* uncompressed size of this file in bytes */
    VTDWORD         dwFileLoc;  /* uncompressed offset of file in the folder */
    VTWORD          wFolderIndex;/* index into the CFFOLDER area */
    VTWORD          wDate;      /* date stamp for this file */
    VTWORD          wTime;      /* time stamp for this file */
} CABFILEINFO, * PCABFILEINFO;
typedef struct IOCABFILEtag
{
    BASEIO                  sBaseIO;    /* Underlying IO system */

    VTHANDLE                hThis;      /* Handle to this structure */
    HIOFILE                 hCabinet;   /* handle to parent IOCABFILE */

    HIOFILE                 hRange;     /* range within folder */

    /* IOCABINET.pFileInfo array index to obtain the cabfile info */
    VTWORD                  wFileIdx;
} IOCABFILE, * PIOCABFILE;
typedef struct IOCABFOLDERtag
{
    BASEIO      sBaseIO;    /* Underlying IO system */

    HIOFILE     hCabinet;   /* handle to parent IOCABFILE */

    VTHANDLE    hData;      /* handle to pData array */
    PCABDATA    pData;      /* array of cab data blocks */

    VTWORD      wDataIdx;   /* index into folder's pDataArray */
    VTDWORD     dwDataLoc;  /* offset within current data block */

    VTDWORD     dwDataOffset;   /* offset for 1st CFDATA block in folder */
    VTWORD      wDataCnt;       /* # of CFDATA blocks in this folder */
    VTWORD      wCompressType;  /* compression type for CFDATAs in folder */
} IOCABFOLDER, * PIOCABFOLDER;
/* struct facilitating access of continguous uncompressed cab folder data */
typedef struct CABFOLDERINFOtag
{
    HIOFILE     hRefFile;   /* handle to either &Folder or hCompress */

    IOCABFOLDER Folder;     /* underlying folder I/O handle */
    HIOFILE     hCompress;  /* valid when folder is compressed */
} CABFOLDERINFO, * PCABFOLDERINFO;
typedef struct IOCABINETtag
{
    BASEIO          sBaseIO;        /* Underlying IO system */

    VTHANDLE        hThis;          /* Handle to this structure */
    HIOFILE         hRefFile;       /* cab file */

    VTWORD          wFolderCnt;     /* count of folders */
    VTWORD          wFileCnt;       /* count of files */

    VTWORD          wHdrReserve;    /* bytes in header reserve field */
    VTBYTE          ubFldrReserve;  /* bytes in folder reserve field */
    VTBYTE          ubDataReserve;  /* bytes in data reserve field */

    VTDWORD         dwFileLoc;      /* offset of first file location */

    VTHANDLE        hFldrInfo;      /* handle to pFldrInfo array */
    PCABFOLDERINFO  pFldrInfo;      /* array of all CABFOLDERINFOs in cab */

    VTHANDLE        hFileInfo;      /* handle to pFileInfo array */
    PCABFILEINFO    pFileInfo;      /* array of file info structs */

    VTHANDLE        hNames;         /* handle to pNames */
    VTWCHAR*        pNames;         /* concatenation of all filenames */
    VTDWORD         dwNamesMax;     /* allocated bytes in pNames */
    VTDWORD         dwNamesUse;     /* bytes used in pNames */

} IOCABINET, * PIOCABINET;
/*****************************************************************************
 * End of CAB stuff
 ****************************************************************************/

/*
|       Node of a Shannon-Fano tree
|       0 is the root.
|       A zero in left field
|       means the right field is the value.
*/
typedef struct SFNODEtag
{
    VTLONG  left;
    VTLONG  right;
} SFNODE, * PSFNODE;
#define HPSFNODE PSFNODE
/*
|       Structure to store input for creating the Shannon-Fano tree.
*/
typedef struct CODEINFOtag
{
    VTLONG  lValue;
    VTSHORT nLength;
} CODEINFO, * PCODEINFO;
typedef struct IOZLIBDATAtag
{
    VTHANDLE                hLitLenTree;
    PSFNODE                 pLitLenTree;
    VTHANDLE                hDistanceTree;
    PSFNODE                 pDistanceTree;
    VTHANDLE                hCodeLenTree;
    PSFNODE                 pCodeLenTree;
    VTHANDLE                hTree;
    PSFNODE                 pTree;
    VTBOOL                  bFinal;                 /* is this the final block? */
    VTBOOL                  bFinished;              /* no more compression. eof */
    VTBYTE                  bType;                  /* what type of compression: 0=none, 1=fixed codes, 2=dynamic codes */
    VTWORD                  wLength;                /* bytes left when bType==0 */
} IOZLIBDATA, * PIOZLIBDATA;
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************        LZSS       *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/
#define IO_CIRCBUF_SIZE             0x1000
/* LZSS Support added Nov 18, 1999 */
typedef struct IOLZSSDATAtag
{
    VTBYTE          bCurFlags;  /* the current lzss flags*/
    VTBYTE          bFlagCount; /* which flag bit to look at next */
    VTHANDLE        hCircBuf;
    VTBYTE *        pCircBuf;
    VTWORD          wCircBufPos;

} IOLZSSDATA, * PIOLZSSDATA;
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************      PKMPLOD      *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/

/* PKMPLOD Support added Sept 11, 2000 */
/* these values correspond to the format, do not change */
#define BINARYCOMPRESSION 0
#define ASCIICOMPRESSION  1
#define ONEKDICTIONARY    4
#define TWOKDICTIONARY    5
#define FOURKDICTIONARY   6
#define LITERALDATA       0
#define CODEDATA          1
typedef struct IOPKMPLODDATAtag
{
    VTBYTE          bCompressionType;   /* Binary or ASCII, currently only support Binary */
    VTBYTE          bDictionarySize;    /* 1k, 2k, or 4k */
    VTBYTE          bDataType;          /* the current data type to read: literal or code */

} IOPKMPLODDATA, * PIOPKMPLODDATA;
/*********************************************************************/
/*********************************************************************/
/*****************                                ********************/
/***************** PDF DECODING AND DECOMPRESSION ********************/
/*****************                                ********************/
/*********************************************************************/
/*********************************************************************/
/*********************************************************************/

/* ASCII85 decoding support added Nov 2, 2000*/
/*********************************************************************/
/*********************************************************************/
/*************************                   *************************/
/*************************      ASCII85      *************************/
/*************************                   *************************/
/*********************************************************************/
/*********************************************************************/
#define ASCII85_CHARDATA_SIZE       5   /* buffer size for character data   */
#define ASCII85_BINARYDATA_SIZE     4   /* buffer size for binary data      */
typedef struct IOASCII85DATAtag
{
    VTBYTE byCharData[ASCII85_CHARDATA_SIZE];
    VTBYTE byBinaryData[ASCII85_BINARYDATA_SIZE];
    VTBOOL bEOD;
    VTBYTE byNumber;
    VTBYTE byIndex;
} IOASCII85DATA, * PIOASCII85DATA;
typedef struct IOYENCDATAtag
{
    VTBYTE  Line[256];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
    VTBOOL  bWithinPart;
} IOYENCDATA, * PIOYENCDATA;
typedef struct IOBTOADATAtag
{
    VTBYTE  Line[32];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
    VTDWORD dwValue;
    VTWORD  wCount;
} IOBTOADATA, * PIOBTOADATA;
typedef struct IOQPDATAtag
{
    VTBYTE  Line[128];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
} IOQPDATA, * PIOQPDATA;
typedef struct IOBinHexDATAtag
{
    VTDWORD dwReadLength;
    VTDWORD dwDataLength;
    VTBYTE  Line[8];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
    VTSHORT cchLastCharacter;
    VTWORD  wRepeatCount;
} IOBINHEXDATA, * PIOBINHEXDATA;
typedef struct IOCOMPRESSEDRTFDATAtag
{
    VTHANDLE hLine;
    VTLPBYTE Line;
    VTBYTE  bFlagByte;
    VTWORD  wBitsLeft;
    VTWORD  wCurrentPosition;
    VTWORD  wPositionsBuffered;
    VTWORD  wNextWritePosition;
    VTDWORD dwCompressedSize;
    VTDWORD dwUnCompressedSize;
    VTDWORD dwSignature;
    VTDWORD dwCrc;
} IOCOMPRESSEDRTFDATA, * PIOCOMPRESSEDRTFDATA;
typedef struct IOXXEDATAtag
{
    VTBYTE  Line[128];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
} IOXXEDATA, * PIOXXEDATA;
typedef struct IOUUEDATAtag
{
    VTBYTE  Line[128];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
} IOUUEDATA, * PIOUUEDATA;
typedef struct IOBASE64DATAtag
{
    VTBYTE  Line[132];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
} IOBASE64DATA, * PIOBASE64DATA;
typedef struct IOUTF7DATAtag
{
    VTWORD  UnCompressedLine[128];
    VTBYTE  Line[128];
    VTWORD  wCurrentPosition;
    VTWORD  wUncompressedLength;
} IOUTF7DATA, * PIOUTF7DATA;