Sources/sccio.pas


     PCABFILEINFO = ^CABFILEINFO;
     CABFILEINFO = record
          dwNameLoc : VTDWORD;
          dwNameLen : VTDWORD;
          dwFileSize : VTDWORD;
          dwFileLoc : VTDWORD;
          wFolderIndex : VTWORD;
          wDate : VTWORD;
          wTime : VTWORD;
       end;
     PPCABFILEINFO = ^PCABFILEINFO;
  { Underlying IO system  }
  { Handle to this structure  }
  { handle to parent IOCABFILE  }
  { range within folder  }
  { IOCABINET.pFileInfo array index to obtain the cabfile info  }

     PIOCABFILE = ^IOCABFILE;
     IOCABFILE = record
          sBaseIO : TBASEIO;
          hThis : VTHANDLE;
          hCabinet : HIOFILE;
          hRange : HIOFILE;
          wFileIdx : VTWORD;
       end;
     PPIOCABFILE = ^PIOCABFILE;
  { Underlying IO system  }
  { handle to parent IOCABFILE  }
  { handle to pData array  }
  { array of cab data blocks  }
  { index into folder's pDataArray  }
  { offset within current data block  }
  { offset for 1st CFDATA block in folder  }
  { # of CFDATA blocks in this folder  }
  { compression type for CFDATAs in folder  }

     PIOCABFOLDER = ^IOCABFOLDER;
     IOCABFOLDER = record
          sBaseIO : TBASEIO;
          hCabinet : HIOFILE;
          hData : VTHANDLE;
          pData : PCABDATA;
          wDataIdx : VTWORD;
          dwDataLoc : VTDWORD;
          dwDataOffset : VTDWORD;
          wDataCnt : VTWORD;
          wCompressType : VTWORD;
       end;
     PPIOCABFOLDER = ^PIOCABFOLDER;
  { struct facilitating access of continguous uncompressed cab folder data  }
  { handle to either &Folder or hCompress  }
  { underlying folder I/O handle  }
  { valid when folder is compressed  }

     PCABFOLDERINFO = ^CABFOLDERINFO;
     CABFOLDERINFO = record
          hRefFile : HIOFILE;
          Folder : IOCABFOLDER;
          hCompress : HIOFILE;
       end;
     PPCABFOLDERINFO = ^PCABFOLDERINFO;
  { Underlying IO system  }
  { Handle to this structure  }
  { cab file  }
  { count of folders  }
  { count of files  }
  { bytes in header reserve field  }
  { bytes in folder reserve field  }
  { bytes in data reserve field  }
  { offset of first file location  }
  { handle to pFldrInfo array  }
  { array of all CABFOLDERINFOs in cab  }
  { handle to pFileInfo array  }
  { array of file info structs  }
  { handle to pNames  }
  { concatenation of all filenames  }
  { allocated bytes in pNames  }
  { bytes used in pNames  }

     PIOCABINET = ^IOCABINET;
     IOCABINET = record
          sBaseIO : TBASEIO;
          hThis : VTHANDLE;
          hRefFile : HIOFILE;
          wFolderCnt : VTWORD;
          wFileCnt : VTWORD;
          wHdrReserve : VTWORD;
          ubFldrReserve : VTBYTE;
          ubDataReserve : VTBYTE;
          dwFileLoc : VTDWORD;
          hFldrInfo : VTHANDLE;
          pFldrInfo : PCABFOLDERINFO;
          hFileInfo : VTHANDLE;
          pFileInfo : PCABFILEINFO;
          hNames : VTHANDLE;
          pNames : PVTWCHAR;
          dwNamesMax : VTDWORD;
          dwNamesUse : VTDWORD;
       end;
     PPIOCABINET = ^PIOCABINET;
  {****************************************************************************
   * End of CAB stuff
   *************************************************************************** }
  {
  |       Node of a Shannon-Fano tree
  |       0 is the root.
  |       A zero in left field
  |       means the right field is the value.
   }

     PSFNODE = ^SFNODE;
     SFNODE = record
          left : VTLONG;
          right : VTLONG;
       end;
     PPSFNODE = ^PSFNODE;

  type
     HPSFNODE = PSFNODE;
  {
  |       Structure to store input for creating the Shannon-Fano tree.
   }

  type

     PCODEINFO = ^CODEINFO;
     CODEINFO = record
          lValue : VTLONG;
          nLength : VTSHORT;
       end;
     PPCODEINFO = ^PCODEINFO;
  { is this the final block?  }
  { no more compression. eof  }
  { what type of compression: 0=none, 1=fixed codes, 2=dynamic codes  }
  { bytes left when bType==0  }

     PIOZLIBDATA = ^IOZLIBDATA;
     IOZLIBDATA = record
          hLitLenTree : VTHANDLE;
          pLitLenTree : PSFNODE;
          hDistanceTree : VTHANDLE;
          pDistanceTree : PSFNODE;
          hCodeLenTree : VTHANDLE;
          pCodeLenTree : PSFNODE;
          hTree : VTHANDLE;
          pTree : PSFNODE;
          bFinal : VTBOOL;
          bFinished : VTBOOL;
          bType : VTBYTE;
          wLength : VTWORD;
       end;
     PPIOZLIBDATA = ^PIOZLIBDATA;
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************        LZSS       ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }

  const
     IO_CIRCBUF_SIZE = $1000;
  { LZSS Support added Nov 18, 1999  }
  { the current lzss flags }
  { which flag bit to look at next  }

  type

     PIOLZSSDATA = ^IOLZSSDATA;
     IOLZSSDATA = record
          bCurFlags : VTBYTE;
          bFlagCount : VTBYTE;
          hCircBuf : VTHANDLE;
          pCircBuf : PVTBYTE;
          wCircBufPos : VTWORD;
       end;
     PPIOLZSSDATA = ^PIOLZSSDATA;
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************      PKMPLOD      ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }
  { PKMPLOD Support added Sept 11, 2000  }
  { these values correspond to the format, do not change  }

  const
     BINARYCOMPRESSION = 0;
     ASCIICOMPRESSION = 1;
     ONEKDICTIONARY = 4;
     TWOKDICTIONARY = 5;
     FOURKDICTIONARY = 6;
     LITERALDATA = 0;
     CODEDATA = 1;
  { Binary or ASCII, currently only support Binary  }
  { 1k, 2k, or 4k  }
  { the current data type to read: literal or code  }

  type

     PIOPKMPLODDATA = ^IOPKMPLODDATA;
     IOPKMPLODDATA = record
          bCompressionType : VTBYTE;
          bDictionarySize : VTBYTE;
          bDataType : VTBYTE;
       end;
     PPIOPKMPLODDATA = ^PIOPKMPLODDATA;
  {******************************************************************* }
  {******************************************************************* }
  {****************                                ******************* }
  {**************** PDF DECODING AND DECOMPRESSION ******************* }
  {****************                                ******************* }
  {******************************************************************* }
  {******************************************************************* }
  {******************************************************************* }
  { ASCII85 decoding support added Nov 2, 2000 }
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************      ASCII85      ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }
  { buffer size for character data    }

  const
     ASCII85_CHARDATA_SIZE = 5;
  { buffer size for binary data       }
     ASCII85_BINARYDATA_SIZE = 4;

  type

     PIOASCII85DATA = ^IOASCII85DATA;
     IOASCII85DATA = record
          byCharData : array[0..(ASCII85_CHARDATA_SIZE)-1] of VTBYTE;
          byBinaryData : array[0..(ASCII85_BINARYDATA_SIZE)-1] of VTBYTE;
          bEOD : VTBOOL;
          byNumber : VTBYTE;
          byIndex : VTBYTE;
       end;
     PPIOASCII85DATA = ^PIOASCII85DATA;

     PIOYENCDATA = ^IOYENCDATA;
     IOYENCDATA = record
          Line : array[0..255] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
          bWithinPart : VTBOOL;
       end;
     PPIOYENCDATA = ^PIOYENCDATA;

     PIOBTOADATA = ^IOBTOADATA;
     IOBTOADATA = record
          Line : array[0..31] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
          dwValue : VTDWORD;
          wCount : VTWORD;
       end;
     PPIOBTOADATA = ^PIOBTOADATA;

     PIOQPDATA = ^IOQPDATA;
     IOQPDATA = record
          Line : array[0..127] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
       end;
     PPIOQPDATA = ^PIOQPDATA;

     PIOBinHexDATA = ^IOBinHexDATA;
     IOBinHexDATA = record
          dwReadLength : VTDWORD;
          dwDataLength : VTDWORD;
          Line : array[0..7] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
          cchLastCharacter : VTSHORT;
          wRepeatCount : VTWORD;
       end;
     PPIOBINHEXDATA = ^PIOBINHEXDATA;

     PIOCOMPRESSEDRTFDATA = ^IOCOMPRESSEDRTFDATA;
     IOCOMPRESSEDRTFDATA = record
          hLine : VTHANDLE;
          Line : VTLPBYTE;
          bFlagByte : VTBYTE;
          wBitsLeft : VTWORD;
          wCurrentPosition : VTWORD;
          wPositionsBuffered : VTWORD;
          wNextWritePosition : VTWORD;
          dwCompressedSize : VTDWORD;
          dwUnCompressedSize : VTDWORD;
          dwSignature : VTDWORD;
          dwCrc : VTDWORD;
       end;
     PPIOCOMPRESSEDRTFDATA = ^PIOCOMPRESSEDRTFDATA;

     PIOXXEDATA = ^IOXXEDATA;
     IOXXEDATA = record
          Line : array[0..127] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
       end;
     PPIOXXEDATA = ^PIOXXEDATA;

     PIOUUEDATA = ^IOUUEDATA;
     IOUUEDATA = record
          Line : array[0..127] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
       end;
     PPIOUUEDATA = ^PIOUUEDATA;

     PIOBASE64DATA = ^IOBASE64DATA;
     IOBASE64DATA = record
          Line : array[0..131] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
       end;
     PPIOBASE64DATA = ^PIOBASE64DATA;

     PIOUTF7DATA = ^IOUTF7DATA;
     IOUTF7DATA = record
          UnCompressedLine : array[0..127] of VTWORD;
          Line : array[0..127] of VTBYTE;
          wCurrentPosition : VTWORD;
          wUncompressedLength : VTWORD;
       end;
     PPIOUTF7DATA = ^PIOUTF7DATA;
  { ASCIIHex decoding support added Nov 6, 2000 }
  {******************************************************************* }
  {******************************************************************* }
  {************************                   ************************ }
  {************************     ASCIIHEX      ************************ }
  {************************                   ************************ }
  {******************************************************************* }
  {******************************************************************* }
  { used when the least significant part is padded with '0'  }
